# control-plane/docs/swagger.json
@@ -4033,6 +4033,12 @@
                 "id": {
                     "type": "integer"
                 },
+                "luaFilters": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.LuaFilter"
+                    }
+                },
                 "name": {
                     "type": "string"
                 },
@@ -4053,6 +4059,45 @@
                 },
                 "withTls": {
                     "type": "boolean"
+                }
+            }
+        },
+        "domain.LuaFilter": {
+            "type": "object",
+            "properties": {
+                "headerName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isActive": {
+                    "type": "boolean"
+                },
+                "listeners": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Listener"
+                    }
+                },
+                "luaScript": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "params": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "sha256": {
+                    "type": "string"
+                },
+                "timeout": {
+                    "type": "integer"
+                },
+                "url": {
+                    "type": "string"
                 }
             }
         },
@@ -4162,6 +4207,9 @@
                 },
                 "clusterName": {
                     "type": "string"
+                },
+                "deny": {
+                    "type": "boolean"
                 },
                 "deploymentVersion": {
                     "$ref": "#/definitions/domain.DeploymentVersion"
@@ -4904,6 +4952,12 @@
                         "type": "string"
                     }
                 },
+                "luaFilters": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.LuaFilter"
+                    }
+                },
                 "overridden": {
                     "type": "boolean"
                 },
@@ -4925,6 +4979,13 @@
                     "type": "array",
                     "items": {
                         "type": "string"
+                    }
+                },
+                "luaFilters": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "additionalProperties": true
                     }
                 },
                 "overridden": {
@@ -4961,6 +5022,39 @@
                     }
                 },
                 "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.LuaFilter": {
+            "type": "object",
+            "properties": {
+                "headerName": {
+                    "type": "string"
+                },
+                "isActive": {
+                    "type": "boolean"
+                },
+                "luaScript": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "params": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "additionalProperties": true
+                    }
+                },
+                "sha256": {
+                    "type": "string"
+                },
+                "timeout": {
+                    "type": "integer"
+                },
+                "url": {
                     "type": "string"
                 }
             }
@@ -5399,6 +5493,9 @@
                     }
                 },
                 "allowed": {
+                    "type": "boolean"
+                },
+                "deny": {
                     "type": "boolean"
                 },
                 "hostRewrite": {
